--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,8 @@
 body {
   font-family: "Inter", sans-serif;
 }
+
+.filter-white {
+  filter: invert(100%) sepia(94%) saturate(0%) hue-rotate(171deg)
+    brightness(107%) contrast(105%);
+}
